# SimpleWebServer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  Taskfile.yml  manifest.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  continous-integration.yml
server/: __init__.py
tests/: test_server.py
