[tool.poetry]
name = "simplewebserver"
version = "1.0.0"
description = "A Simple Web Server"
authors = ["Christopher Carroll <chris@carroll.codes>"]
license = "MIT"
include = [ "tests" ]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
pytest = "^7.1.2"
mypy = "^0.950"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
