[tool.poetry]
name = "server"
version = "1.0.0"
description = "A Simple Web Server"
authors = ["Christopher Carroll <chris@carroll.codes>"]
license = "MIT"
include = [ "server", "Dockerfile" ]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
requests = "^2.27.1" # Needed for FastAPI's TestClient see /tests/test_server.py TODO(lookup potential way to eliminate the need to strictly define this dependancy)

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
pytest = "^7.1.2"
mypy = "^0.950"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "server/__init__.py:__version__",
    "pyproject.toml:version"
]
version_pattern =[
    "manifest.yml:VERSION v{version}"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "mkdir dist && cp manifest.yml dist/manifest.yml"